--- a/index.html
+++ b/index.html
@@ -3,9 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Style.css">
+    <!-- <link rel="stylesheet" href="/Style.css"> -->
     <title></title>
 </head>
+<style>
+     *{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+ }
+
+.container{
+    width: 100%;
+    min-height: 100vh;
+    background: linear-gradient( 135deg , #a06969 50%, #5889d8 100%);
+}
+.header{
+  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 60px;
+}
+ 
+.todo-app{
+    width: 400px;
+    height: 250px;
+    background: #ac9292; 
+    /* margin: 50px auto; */
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    padding: 20px;
+    align-items: center;
+    justify-content: center;
+    /* display: flex; */
+
+}
+.button{
+    /* width: 100%;
+    height: 40px; */
+    background: #000;
+    color: #fff; 
+    border: none;  
+   border-radius: 5px; 
+    cursor: pointer;
+    font-size: 18px;
+    padding: 10px 15px;
+    border-radius: 20px;
+}
+
+ul li{
+    list-style: none;
+    font-size: 17px;
+    padding: 10px 0;
+    user-select: none;
+    cursor: pointer;
+    position:relative;
+
+}
+ul li::before{
+    content: "";
+    width: 10px;
+    height: 10px;
+    background: #e7e1e1;
+    border-radius: 50%;
+    display: inline-block;
+    margin-right: 10px;
+}
+
+ul li.checked{
+    /* background: #000; */
+    color: #1d1717;
+    text-decoration: line-through;
+    
+}
+ul li.checked::before{
+    background: #0b0b0b;
+}
+
+ul li span{
+    position: absolute;
+    right: 10px;
+    top: 5px;
+    height: 40px;
+    font-size: 20px;
+    color: #000000;
+    cursor: pointer;
+    line-height: 40px;
+    text-align: center;
+      border-radius: 50%;
+}
+
+ul li span:hover{
+    background: #000;
+    color: #fff;
+}
+</style>
 <body>
     <div class="container">
               <div class="header">
@@ -30,6 +124,50 @@
               </div>
         
     </div>
-    <script src="/Script.js"></script>
+    <script >
+        const inputbox = document.getElementById("todo-input");
+const listcontainer = document.getElementById("todo-list");
+
+function addTask(){
+    if(inputbox.value === ""){
+        alert("please  write something")
+    }
+    else{
+        let li = document.createElement("li");
+        li.innerHTML = inputbox.value;
+        listcontainer.appendChild(li);
+        event.preventDefault();
+        let span = document.createElement("span");
+        span.innerHTML = "\u00D7";
+        li.appendChild(span);
+    }
+    inputbox.value = "";
+    saveData();
+}
+
+
+listcontainer.addEventListener("click", function(e){
+    if(e.target.tagName === "LI"){
+        e.target.classList.toggle("checked");
+        saveData();
+    }
+    else if(e.target.tagName === "SPAN"){
+        e.target.parentElement.remove();
+        saveData();
+    }
+}, false);
+
+
+function saveData() {
+    localStorage.setItem("data", listcontainer.innerHTML);
+}
+
+
+function showTasks() {
+    listcontainer.innerHTML = localStorage.getItem("data");
+}
+
+showTasks();
+    </script>
 </body>
 </html>
